--- a/Hero Designer/Hero Designer.csproj
+++ b/Hero Designer/Hero Designer.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <!--Project was exported from assembly: C:\Users\Xbass\Desktop\Hero Designer.exe-->
   <PropertyGroup>
@@ -78,11 +78,18 @@
       <HintPath>lib\midsControls.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.cs" />
     <Compile Include="clsOutput.cs" />
     <Compile Include="clsToonX.cs" />
@@ -265,63 +272,177 @@
     <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="DataView.resx" />
-    <EmbeddedResource Include="frmAbout.resx" />
-    <EmbeddedResource Include="frmAccolade.resx" />
-    <EmbeddedResource Include="frmBusy.resx" />
-    <EmbeddedResource Include="frmCalcOpt.resx" />
-    <EmbeddedResource Include="frmColourSettings.resx" />
-    <EmbeddedResource Include="frmCompare.resx" />
-    <EmbeddedResource Include="frmCSV.resx" />
-    <EmbeddedResource Include="frmData.resx" />
-    <EmbeddedResource Include="frmDBEdit.resx" />
-    <EmbeddedResource Include="frmDPSCalc.resx" />
-    <EmbeddedResource Include="frmEditArchetype.resx" />
-    <EmbeddedResource Include="frmEditPower.resx" />
-    <EmbeddedResource Include="frmEditPowerset.resx" />
-    <EmbeddedResource Include="frmEnhData.resx" />
-    <EmbeddedResource Include="frmEnhEdit.resx" />
-    <EmbeddedResource Include="frmEnhMiniPick.resx" />
-    <EmbeddedResource Include="frmEntityEdit.resx" />
-    <EmbeddedResource Include="frmEntityListing.resx" />
-    <EmbeddedResource Include="frmExportColor.resx" />
-    <EmbeddedResource Include="frmFloatingStats.resx" />
-    <EmbeddedResource Include="frmForum.resx" />
-    <EmbeddedResource Include="frmImport_Archetype.resx" />
-    <EmbeddedResource Include="frmImport_EnhancementEffects.resx" />
-    <EmbeddedResource Include="frmImport_Entities.resx" />
-    <EmbeddedResource Include="frmImport_mod.resx" />
-    <EmbeddedResource Include="frmImport_Power.resx" />
-    <EmbeddedResource Include="frmImport_Powerset.resx" />
-    <EmbeddedResource Include="frmImport_Recipe.resx" />
-    <EmbeddedResource Include="frmImport_SalvageReq.resx" />
-    <EmbeddedResource Include="frmImport_SetAssignments.resx" />
-    <EmbeddedResource Include="frmImport_SetBonusAssignment.resx" />
-    <EmbeddedResource Include="frmImportEffects.resx" />
-    <EmbeddedResource Include="frmImportEnhSets.resx" />
-    <EmbeddedResource Include="frmImportPowerLevels.resx" />
-    <EmbeddedResource Include="frmIncarnate.resx" />
-    <EmbeddedResource Include="FrmInputLevel.resx" />
-    <EmbeddedResource Include="frmLoading.resx" />
-    <EmbeddedResource Include="frmMain.resx" />
-    <EmbeddedResource Include="frmMiniList.resx" />
-    <EmbeddedResource Include="frmOptionListDlg.resx" />
-    <EmbeddedResource Include="frmPowerBrowser.resx" />
-    <EmbeddedResource Include="frmPowerEffect.resx" />
-    <EmbeddedResource Include="frmPrint.resx" />
-    <EmbeddedResource Include="frmReadme.resx" />
-    <EmbeddedResource Include="frmRecipeEdit.resx" />
-    <EmbeddedResource Include="frmRecipeViewer.resx" />
-    <EmbeddedResource Include="frmSalvageEdit.resx" />
-    <EmbeddedResource Include="frmSetEdit.resx" />
-    <EmbeddedResource Include="frmSetFind.resx" />
-    <EmbeddedResource Include="frmSetListing.resx" />
-    <EmbeddedResource Include="frmSetViewer.resx" />
-    <EmbeddedResource Include="frmStats.resx" />
-    <EmbeddedResource Include="frmTotals.resx" />
-    <EmbeddedResource Include="frmTweakMatching.resx" />
-    <EmbeddedResource Include="frmZStatus.resx" />
-    <EmbeddedResource Include="Resources.resx" />
+    <EmbeddedResource Include="DataView.resx">
+      <DependentUpon>DataView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAbout.resx">
+      <DependentUpon>frmAbout.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAccolade.resx">
+      <DependentUpon>frmAccolade.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBusy.resx">
+      <DependentUpon>frmBusy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCalcOpt.resx">
+      <DependentUpon>frmCalcOpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmColourSettings.resx">
+      <DependentUpon>frmColourSettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCompare.resx">
+      <DependentUpon>frmCompare.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCSV.resx">
+      <DependentUpon>frmCSV.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmData.resx">
+      <DependentUpon>frmData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDBEdit.resx">
+      <DependentUpon>frmDBEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDPSCalc.resx">
+      <DependentUpon>frmDPSCalc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmEditArchetype.resx">
+      <DependentUpon>frmEditArchetype.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmEditPower.resx">
+      <DependentUpon>frmEditPower.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmEditPowerset.resx">
+      <DependentUpon>frmEditPowerset.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmEnhData.resx">
+      <DependentUpon>frmEnhData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmEnhEdit.resx">
+      <DependentUpon>frmEnhEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmEnhMiniPick.resx">
+      <DependentUpon>frmEnhMiniPick.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmEntityEdit.resx">
+      <DependentUpon>frmEntityEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmEntityListing.resx">
+      <DependentUpon>frmEntityListing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmExportColor.resx">
+      <DependentUpon>frmExportColor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmFloatingStats.resx">
+      <DependentUpon>frmFloatingStats.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmForum.resx">
+      <DependentUpon>frmForum.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImport_Archetype.resx">
+      <DependentUpon>frmImport_Archetype.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImport_EnhancementEffects.resx">
+      <DependentUpon>frmImport_EnhancementEffects.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImport_Entities.resx">
+      <DependentUpon>frmImport_Entities.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImport_mod.resx">
+      <DependentUpon>frmImport_mod.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImport_Power.resx">
+      <DependentUpon>frmImport_Power.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImport_Powerset.resx">
+      <DependentUpon>frmImport_Powerset.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImport_Recipe.resx">
+      <DependentUpon>frmImport_Recipe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImport_SalvageReq.resx">
+      <DependentUpon>frmImport_SalvageReq.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImport_SetAssignments.resx">
+      <DependentUpon>frmImport_SetAssignments.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImport_SetBonusAssignment.resx">
+      <DependentUpon>frmImport_SetBonusAssignment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImportEffects.resx">
+      <DependentUpon>frmImportEffects.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImportEnhSets.resx">
+      <DependentUpon>frmImportEnhSets.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmImportPowerLevels.resx">
+      <DependentUpon>frmImportPowerLevels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmIncarnate.resx">
+      <DependentUpon>frmIncarnate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmInputLevel.resx">
+      <DependentUpon>FrmInputLevel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmLoading.resx">
+      <DependentUpon>frmLoading.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMiniList.resx">
+      <DependentUpon>frmMiniList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmOptionListDlg.resx">
+      <DependentUpon>frmOptionListDlg.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPowerBrowser.resx">
+      <DependentUpon>frmPowerBrowser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPowerEffect.resx">
+      <DependentUpon>frmPowerEffect.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPrint.resx">
+      <DependentUpon>frmPrint.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmReadme.resx">
+      <DependentUpon>frmReadme.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmRecipeEdit.resx">
+      <DependentUpon>frmRecipeEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmRecipeViewer.resx">
+      <DependentUpon>frmRecipeViewer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSalvageEdit.resx">
+      <DependentUpon>frmSalvageEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSetEdit.resx">
+      <DependentUpon>frmSetEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSetFind.resx">
+      <DependentUpon>frmSetFind.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSetListing.resx">
+      <DependentUpon>frmSetListing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSetViewer.resx">
+      <DependentUpon>frmSetViewer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmStats.resx">
+      <DependentUpon>frmStats.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTotals.resx">
+      <DependentUpon>frmTotals.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTweakMatching.resx">
+      <DependentUpon>frmTweakMatching.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmZStatus.resx">
+      <DependentUpon>frmZStatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources.resx">
+      <DependentUpon>Resources.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
