--- a/Hero Designer/Hero Designer.csproj
+++ b/Hero Designer/Hero Designer.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <!--Project was exported from assembly: C:\Users\Xbass\Desktop\Hero Designer.exe-->
   <PropertyGroup>
@@ -459,51 +459,51 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Data\AttribMod.mhd">
-      <Link>Data\AttribMod.mhd</Link>
-    </None>
-    <None Include="..\Data\bbcode.mhd">
-      <Link>Data\bbcode.mhd</Link>
-    </None>
-    <None Include="..\Data\Compare.mhd">
-      <Link>Data\Compare.mhd</Link>
-    </None>
-    <None Include="..\Data\Config.mhd">
-      <Link>Data\Config.mhd</Link>
-    </None>
-    <None Include="..\Data\EClasses.mhd">
-      <Link>Data\EClasses.mhd</Link>
-    </None>
-    <None Include="..\Data\EnhDB.mhd">
-      <Link>Data\EnhDB.mhd</Link>
-    </None>
-    <None Include="..\Data\I12.mhd">
-      <Link>Data\I12.mhd</Link>
-    </None>
-    <None Include="..\Data\I9.mhd">
-      <Link>Data\I9.mhd</Link>
-    </None>
-    <None Include="..\Data\Levels.mhd">
-      <Link>Data\Levels.mhd</Link>
-    </None>
-    <None Include="..\Data\Maths.mhd">
-      <Link>Data\Maths.mhd</Link>
-    </None>
-    <None Include="..\Data\Origins.mhd">
-      <Link>Data\Origins.mhd</Link>
-    </None>
-    <None Include="..\Data\patchnotes.rtf">
-      <Link>Data\patchnotes.rtf</Link>
-    </None>
-    <None Include="..\Data\Recipe.mhd">
-      <Link>Data\Recipe.mhd</Link>
-    </None>
-    <None Include="..\Data\Salvage.mhd">
-      <Link>Data\Salvage.mhd</Link>
-    </None>
-    <None Include="..\Data\SetTypes.mhd">
-      <Link>Data\SetTypes.mhd</Link>
-    </None>
+    <Content Include="Data\AttribMod.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\bbcode.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Compare.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Config.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\EClasses.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\EnhDB.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\I12.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\I9.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Levels.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Maths.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Origins.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\patchnotes.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Recipe.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Salvage.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\SetTypes.mhd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
